--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -19,8 +19,8 @@ date: 2017-04-18 09:00:00 +0800
         <div class="thumbnail">
             <img src="/portfolio/images/demo-baymax.png" alt="Baymax!">
             <div class="caption clearfix">
-                <h4><a class="posts-list-name" href="/portfolio/demo/demo-baymax/index.html" target="_blank">Baymax</a></h4>
-                <a class="btn btn-primary pull-right" href="/portfolio/demo/demo-baymax/index.html" target="_blank">案例演示</a>
+                <h4><a class="posts-list-name" href="https://690244957.github.io/portfolio/first-web-work/" target="_blank">网页设计第一份作品</a></h4>
+                <a class="btn btn-primary pull-right" href="https://690244957.github.io/portfolio/first-web-work/" target="_blank">作品演示</a>
             </div>
         </div>
     </div>
